--- a/Camera/frontcaimen/complete_return.html
+++ b/Camera/frontcaimen/complete_return.html
@@ -361,7 +361,7 @@
         <h3 align = "center">User : {{user}}</h3>
         <h3 align = "center">DATE : {{date}}</h3>
 
-        <a class="button" href="index" >กลับเข้าสู่หน้าlogin <span class="sr-only"></span></a><br>
+        <a class="button" href="enter" >กลับเข้าสู่หน้า Enter code <span class="sr-only"></span></a><br>
         <p class="text3">@THE CAIMAN : BORROW AND RETURN CAMERA SYSTEM FOR FIBO</p>
     </div>
 </body>
