--- a/Camera/frontcaimen/done_register.html
+++ b/Camera/frontcaimen/done_register.html
@@ -327,7 +327,8 @@
         <img src="{% static "img/green_check.png"%}" class="imgsize"  />
         <h1 class="text1">ลงทะเบียนสำเร็จ</h1>
         <p id="user" class="text2"></p>
-        <h3>{{id}}</h3>
+        <h2 align = center >USERNAME</h3>
+        <h2 align = center >{{id}}</h3>
             <!-- <script>
                 var x = "0000000000";
                 document.getElementById("user").innerHTML ="รหัสสมาชิก " + x;</script> -->
