--- a/Camera/frontcaimen/index.html
+++ b/Camera/frontcaimen/index.html
@@ -453,18 +453,12 @@
         </div>
         <div class="column3">
           <p class="text3">
-            <span class = "green"></span>
-            <span id="Available" class="text4"></span>
-            <script>
-              var x = 10;
-              document.getElementById("Available").innerHTML ="Available camera : " + x;</script>
+            <p class="text2">Available camera : 2</p>
+            
           </p>
         <p class="text5">
-            <span class = "red" ></span>
-            <span id="Disavailable" class="text4"></span>
-              <script>
-                var x = 10;
-                document.getElementById("Disavailable").innerHTML ="Disavailable camera : " + x;</script>
+            <p class="text2">Disavailable camera : {{Dis}}</p>
+            
         </p>
         <a class="nav-link" href="test"> ลบ <span class="sr-only"></span></a>
         </div>
